<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.FAQActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:id="@+id/backarrow"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:src="@drawable/multiply"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FAQs"
            android:layout_marginLeft="150dp"
            android:textSize="15sp"
            />

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/cardrefer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/toolprofile"
        android:background="@color/light"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="what is the OYo referral program ?"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"/>

    </android.support.v7.widget.CardView>

 <android.support.v7.widget.CardView
        android:id="@+id/cardbenifit"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/cardrefer"
     android:layout_marginTop="10dp"
     android:background="@color/light"
     android:layout_marginRight="20dp"
     android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/benifit"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"/>

    </android.support.v7.widget.CardView>
<android.support.v7.widget.CardView
        android:id="@+id/freestay"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/cardbenifit"
     android:layout_marginTop="10dp"
     android:background="@color/light"
     android:layout_marginRight="20dp"
     android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/freestay"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"/>

    </android.support.v7.widget.CardView>
<android.support.v7.widget.CardView
        android:id="@+id/veryclose"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/freestay"
     android:layout_marginTop="10dp"
     android:background="@color/light"
     android:layout_marginRight="20dp"
     android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/veryclose"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"/>

    </android.support.v7.widget.CardView>
<android.support.v7.widget.CardView
        android:id="@+id/unable"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/veryclose"
     android:layout_marginTop="10dp"
     android:background="@color/light"
     android:layout_marginRight="20dp"
     android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="I am unable use OYO Rupee on my booking"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"/>

    </android.support.v7.widget.CardView>

<android.support.v7.widget.CardView
        android:id="@+id/qualify"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/unable"
     android:layout_marginTop="10dp"
     android:background="@color/light"
     android:layout_marginRight="20dp"
     android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="what qualifies as a valid referral"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"/>

    </android.support.v7.widget.CardView>

<android.support.v7.widget.CardView
        android:id="@+id/maximum"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/qualify"
     android:layout_marginTop="10dp"
     android:background="@color/light"
     android:layout_marginRight="20dp"
     android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maximum"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"/>

    </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/limit"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="5dp"
            app:layout_constraintTop_toBottomOf="@+id/maximum"
            android:layout_marginTop="10dp"
            android:background="@color/light"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/limit"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"/>

        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/more"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/limit"
        android:layout_marginTop="10dp"
        android:background="@color/light"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"/>

    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/more"
        android:layout_marginTop="10dp"
        android:background="@color/light"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"/>

    </android.support.v7.widget.CardView>
 <android.support.v7.widget.CardView
        android:id="@+id/when"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/country"
        android:layout_marginTop="10dp"
        android:background="@color/light"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="When will my referral geet OYO Rupee"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center"/>

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>

</ScrollView>